--- a/8-curry/index.qmd
+++ b/8-curry/index.qmd
@@ -1,13 +1,13 @@
 ---
-title: <span style="color:white">The Evolution of LeBron's Shot Choices (2003–2024)</span>
-subtitle: "How the King’s shot selection mirrors the NBA’s transformation"
+title: <span style="color:white">The Gravity of Greatness</span>
+subtitle: "How Steph Curry redefined basketball, leadership, and the power of movement"
 
 author: 
 - name: "King Matayo"
   email: kingmatayo.thefirst@gmail.com
-date: 12/07/2024
+date: 12/17/2024
 
-title-block-banner: ./assets/lebron-collage.jpg
+title-block-banner: ./assets/curry.jpg
 title-block-banner-color: "black"
 
 format: html
@@ -42,201 +42,96 @@ library(viridis)
 # Source functions
 source(file="./R/00-functions.R")
 
-# Read csv file with all NBA shots data from 2003 to 2024
-all_shots <- read.csv("./data/allshots-2003-2024.csv")
 
 ```
 
-# A rookie’s first shot
+# Be Different
 
-In my experience, the simplest decisions often reveal the most about who we are, at any given point in time.
+The story of Steph Curry isn’t about basketball.
 
-On October 29, 2003, 18-year-old LeBron James made his first shot decision as an NBA player. It wasn’t a flashy dunk or a deep three. It was a mid-range jumper - plain, efficient, unremarkable. Two points.
+It’s about innovation, leadership, and what happens when someone sees the game differently than everyone else. Curry didn’t just make three-pointers; he forced the world to rewrite its playbook. He didn’t just move without the ball; he changed what “teamwork” meant.
 
-::: column-margin
-[LeBron's 1st NBA Game: October 29, 2003](https://youtu.be/JLjH0rrNFeU?si=R5YavOwTrWUNfcZ2){target="_blank"}
-:::
+Here’s what makes this story worth telling: Curry’s impact is so immense that even people who hate basketball know his name.
 
-But that single shot spoke volumes. It told us what basketball was in 2003: a game that valued size and strength, rewarded mid-range specialists, and treated the three-point line as an occasional luxury.
+His story is what happens when skill meets confidence and confidence becomes contagious.
 
-Fast forward 20 years, and that same decision would look out of place. Today’s NBA is unrecognizable. Three-pointers aren’t just common - they’re necessary. Mid-range shots are now basketball’s version of a landline phone: technically still around, but rarely used.
+# The Risk That Changed Everything
 
-::: column-margin
-[LeBron, 20 years later: October 29, 2023](https://youtu.be/7-q0NDE-_bw?si=mcOFaFomUdgVMu6w){target="_blank"}
-:::
+Rewind to the early 2000s, when every coach in basketball preached the same sermon: Take smart shots. Don’t shoot from 30 feet. Don’t shoot off-balance. These rules weren’t just strategy—they were gospel. The three-point line existed, but teams treated it like a suggestion, not an opportunity.
 
-LeBron’s first shot wasn’t just the start of his career. It was a snapshot of a moment in time. And what’s fascinating is how his evolution mirrors the evolution of the league itself. His choices on the court became a masterclass in adaptation.
+Enter Steph Curry.
 
-This is the story of how LeBron’s shot selection changed over two decades, and how those choices reflect the shifting forces that reshaped the game of basketball.
+In college, Curry looked too small to dominate. In the NBA, he looked too frail to survive. But Steph wasn’t interested in surviving—he was interested in playing differently.
 
-::: {.panel-tabset .nav-pills}
-## LeBron's first NBA game chart
+Basketball purists watched Curry launch shots from absurd distances and winced. Coaches on opposing benches shook their heads. It looked reckless.
 
-```{r warning=FALSE, message=FALSE}
-# Creating a basic shot chart for Lebron's 1st NBA shot
+But what looked like risk to everyone else was, to Curry, an edge.
 
-create_shotchart(all_shots,"LeBron James",20031029)
-```
+*Placeholder for Analysis: Compare league-average three-point attempts and Curry’s shot chart, showing his confidence to shoot where no one else dared.*
 
-## 20 years later
+The risk wasn’t just in taking those shots. It was in believing he could make them.
 
-```{r warning=FALSE, message=FALSE}
-create_shotchart(all_shots,"LeBron James",20231029)
-```
+# The Power of Movement
 
-## Comparison: 2003 vs 2023
+Curry’s shooting changed basketball. But it was his movement that changed teams.
 
-```{r warning=FALSE, message=FALSE}
-# Generate's Lebron's slope chart with the slope chart generating function created
-base_lebron_slope_chart <- shots_game_by_game_slope_chart(all_shots,"LeBron James",20031029,20231029)
+Here’s the thing: Great players dominate the ball. They call for it, hold it, and make everything orbit around them. That’s how the game works. Or so we thought.
 
-# Style it abit
-base_lebron_slope_chart +
-  scale_x_discrete(labels = c("20031029" = "October 29, 2003", "20231029" = "October 29, 2023")) + 
-  labs(
-    title = "LeBron's shot choices: Oct. 29, 2003 vs. 2023",
-    subtitle = "His 3PT attempts went up from 5% to 42% of all shot choices",
-    x = "",
-    y = "% of shots") +
-  theme_minimal() +
-  theme(
-    text = element_text(size = 14),
-    legend.position = "none",  # Remove the legend
-    plot.title = element_text(size = 14, face = "bold"),
-    plot.subtitle = element_text(size = 10)
-  )
-```
-:::
+Steph does the opposite. He moves. And keeps moving. And never stops moving.
 
-...
+Imagine guarding him. You fight through one screen. Then another. Then another. He doesn’t get tired—you do. Curry doesn’t just wear out defenses; he rearranges them.
 
-# 2003-2008: The power of playing to your strengths
+There’s a term in physics called gravitational pull. The bigger the object, the more it pulls everything else toward it. Steph Curry on the court is a gravitational force. Defenders stick to him even when he doesn’t have the ball. Entire teams shift to account for his orbit.
 
-In LeBron’s early years, the game was simple: get to the basket.
+That kind of movement—constant, purposeful—does something to teammates, too. When Curry runs off screens, he creates space. Space for cutters. Space for shooters. Space for someone else to shine.
 
-He was faster, stronger, and more athletic than most players on the court. Why take a risky three-pointer when you could bulldoze your way to the rim? Over 40% of his shots came from the paint, where he was nearly unstoppable.
+That’s leadership. Not by demanding attention, but by creating opportunity.
 
-The mid-range jumper - like the one he made in his first game - was his secondary weapon. And it worked because it fit the league’s style. Coaches weren’t chasing efficiency metrics yet. The paint and mid-range were where championships were won.
+*Placeholder for Analysis: Use player tracking data and heat maps to highlight Curry’s movement, showing the ripple effects on spacing and team success.*
 
-LeBron wasn’t just playing basketball. He was thriving in a system built for players like him. The lesson? Success often comes from maximizing what works in the moment, even if it won’t last forever.
+# Confidence That Infects
 
-```{r warning=FALSE, message=FALSE, include=FALSE,output=FALSE}
+There’s a reason Steph Curry makes his teammates better. It’s not just his shooting, or his movement—it’s his confidence.
 
-# Since this is time-series data - use a custom function to create a line chart - as i did before, but this time make it animated with gganimate
+Confidence is one of those things that multiplies. When a leader plays like he believes in something, everyone else starts to believe, too. Curry doesn’t take shots he knows he’ll make; he takes shots he thinks he can make.
 
-base_lebron_linechart_03_08 <- create_linechart(all_shots,"LeBron James",2003,2008)
+There’s a moment during a Warriors game that sums it up perfectly. Curry pulls up from 35 feet and fires. Before the ball even hits the rim, he’s turned around, already celebrating.
 
-lebron_linechart_03_08_v2 <- base_lebron_linechart_03_08 +
-  # Animation: reveal a path per season
-  transition_reveal(yearSeason) +
-  labs(
-    title = "LeBron James % of Shot Choices by Court Zone and by Season (2003-08)",
-    x = "Season",
-    y = "% of Shots",
-    color = "Court Zone"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+It’s a small thing. But it tells his teammates: Trust yourself. It tells the defense: You can’t stop this.
 
-# Save the animation
-# anim_save("./assets/lebron_linechart_03_08_v2.gif", lebron_linechart_03_08_v2)
+And when Curry celebrates a teammate’s three-pointer as loudly as his own, it tells the entire team: This isn’t about me. It’s about us.
 
+*Placeholder for Analysis: Compare team performance metrics—offensive ratings, teammate shooting percentages—when Curry is on and off the floor.*
 
-```
+That’s the thing about leadership: The best leaders don’t just succeed. They give others the confidence to succeed, too.
 
-![LeBron's shot choices (2003-08) : Over 40% of LeBron’s shots came from the paint, with mid-range jumpers making up the second-largest proportion. Threes were an afterthought, comprising less than 15% of his attempts.](assets/lebron_linechart_03_08_v2.gif)
+# Innovation is a Choice
 
-# 2009-2015: Learning to adapt
+When historians look back at this era of basketball, they won’t just say Steph Curry changed the game. They’ll say he changed the way people thought about the game.
 
-By 2009, the NBA was changing. The three-point revolution, sparked by analytics and players like Stephen Curry, was underway. LeBron noticed.
+There’s a broader lesson here.
 
-He didn’t immediately abandon the mid-range game - it was still part of his identity - but he started taking more three-pointers. Slowly, deliberately, he added them to his repertoire. By the time he joined the Miami Heat in 2010, and with the influence of teammates like Ray Allen who joined the Heat in 2012, his three-point attempts had grown to 25% of his total shots.
+Most of us are taught to play by the rules. We take the “smart shots,” follow the established plays, and avoid risks that could embarrass us. But every now and then, someone comes along who sees the rules differently—who decides they’re not fixed, just waiting to be redefined.
 
-This wasn’t just about skill development. It was about survival. The game was evolving, and players who clung to the old ways risked falling behind.
+Steph Curry took a game built around height and strength and turned it into a game about space and precision. He showed that small changes—shooting from a little farther, moving a little more—can create massive shifts.
 
-LeBron’s willingness to adapt showed a crucial insight: the best performers don’t just play their game -they adjust to the rules as they change.
+What looked like luck to others was, in reality, deliberate innovation.
 
-```{r warning=FALSE, message=FALSE, include=FALSE,output=FALSE}
-base_lebron_linechart_09_15 <- create_linechart(all_shots,"LeBron James",2009,2015)
+# Pulling Everyone Into Your Orbit
 
-lebron_linechart_09_15_v2 <- base_lebron_linechart_09_15 +
-  # Animation: reveal a path per season
-  transition_reveal(yearSeason) +
-  labs(
-    title = "LeBron James % of Shot Choices by Court Zone and by Season (2009-15)",
-    x = "Season",
-    y = "% of Shots",
-    color = "Court Zone"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+Curry’s story isn’t about basketball. It’s about confidence, leadership, and the courage to see opportunities where others see risks.
 
-# Save the animation
-# anim_save("./assets/lebron_linechart_09_15_v2.gif", lebron_linechart_09_15_v2)
+He reminds us that leadership isn’t about being the loudest voice in the room; it’s about movement—creating space for others to succeed.
 
-```
+He reminds us that confidence isn’t just personal—it’s contagious.
 
-![Lebron's shot choices (2009-15) : Three-point attempts grew from 15% to 25% of his total shots. You can see the drastic change between 2012 and 2013 - the years he won 2 championships, back to back.](assets/lebron_linechart_09_15_v2.gif)
+And he reminds us that greatness isn’t always about fitting into the system; sometimes, it’s about having the courage to rewrite it.
 
-# 2016-2024: Embracing the new reality
+*Placeholder for Final Insights: Use visualizations to show Curry’s long-term impact on league-wide trends—three-point attempts, spacing, and player roles.*
 
-The modern NBA belongs to the three-pointer, and so does LeBron.
+In the end, Steph Curry’s greatest skill isn’t shooting or dribbling. It’s the ability to pull everyone—teammates, defenses, even fans—into his orbit.
 
-Between 2016 and 2023, over 35% of his shots came from beyond the arc. The mid-range? Almost gone. The paint? Still important, but less dominant than before.
-
-This wasn’t a concession—it was a strategy. LeBron didn’t stop attacking the basket. He just became more selective, choosing to drive when it mattered most and saving his energy for long-range daggers.
-
-The league had fully transitioned to an era of spacing and efficiency. Teams weren’t just tolerating three-pointers—they were building offenses around them. LeBron’s game evolved accordingly.
-
-The takeaway here is simple: the ability to change isn’t a weakness. It’s a competitive advantage
-
-```{r warning=FALSE, message=FALSE, include=FALSE,output=FALSE}
-
-base_lebron_linechart_16_24 <- create_linechart(all_shots,"LeBron James",2016,2024)
-
-lebron_linechart_16_24_v2 <- base_lebron_linechart_16_24 +
-  # Animation: reveal a path per season
-  transition_reveal(yearSeason) +
-  labs(
-    title = "LeBron James % of Shot Choices by Court Zone and by Season (2016-24)",
-    x = "Season",
-    y = "% of Shots",
-    color = "Court Zone"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))
-
-# Save the animation
-anim_save("./assets/lebron_linechart_16_24_v2.gif", lebron_linechart_16_24_v2)
-
-
-```
-
-![LeBron's shot choices (2016-2024) : The shift isn't just about LeBron. The NBA's average number of three-point attempts per game has more than doubled since his rookie year. The league has transitioned from a post-centric style to a perimeter-oriented game](assets/lebron_linechart_16_24_v2.gif)
-
-# LeBron as a mirror to the NBA
-
-LeBron’s career isn’t just about scoring points. It’s about reflecting the game’s evolution.
-
-The mid-range game, once the foundation of basketball, is now a relic. Analytics proved that long-range shots and finishes at the rim were more valuable, and the league responded. LeBron’s shift from mid-range jumpers to three-pointers wasn’t just personal growth - it was basketball growth.
-
-Consider this: In 2003, NBA teams averaged just 14 three-point attempts per game. By 2023, that number had more than doubled to 35. LeBron adapted not because he wanted to - but because he had to.
-
-The NBA’s greatest players aren’t just defined by their talent. They’re defined by how well they adjust when the rules of the game change.
-
-# What his journey can teach us
-
-LeBron’s evolution is a lesson in adaptability. He started his career mastering the tools of his era. Then, as the game changed, he didn’t resist - he evolved with it.
-
-For players entering the league today, the message is clear: success isn’t just about being great at one thing. It’s about being willing to reinvent yourself when the world around you changes.
-
-LeBron’s journey isn’t just about basketball. It’s about the universal truth that staying relevant requires constant evolution. The game always changes. The question is whether you’ll change with it.
-
-I believe that when its all said and done, LeBron’s legacy won't just about his stats or his championships. It’s about his adaptability.
-
-Over 20 years, he’s played in a league that’s transformed itself multiple times. Each time, LeBron transformed with it, redefining what it means to be great in basketball.
-
-The King’s reign is a testament to one simple idea: if you want to last, you have to evolve.
+That’s the gravity of greatness
 
 ------------------------------------------------------------------------
 
